--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stylish-portfolio-gem</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Rudra Gahlot</title>
+    <meta name="description" content="My Personal Website" />
+    <meta name="author" content="Rudra Pratap" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
