--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rudra Gahlot</title>
     <meta name="description" content="My Personal Website" />
     <meta name="author" content="Rudra Pratap" />
-    <meta property="og:image" content="/og-image.png" />
+    <!-- <meta property="og:image" content="/og-image.png" /> -->
   </head>
 
   <body>
